GROOVY-7971, GROOVY-8965, GROOVY-10702, GROOVY-11137